correcting font markup, desired color not showing (#7a991a)

--- a/css/city_gallery.css
+++ b/css/city_gallery.css
@@ -25,7 +25,8 @@ padding: 50px 0px;
 }
 
 h3 { 
-font: 40px #7a991a;
+font-size: 40px;
+font-color: #7a991a;
 text-align: center;
 text-shadow: 2px 2px #ccc;
 margin: 5px 0px;
